--- a/style.css
+++ b/style.css
@@ -462,7 +462,8 @@ a{
     
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between;
+    justify-content: flex-start; */
 }
 
 @keyframes turn-x{
@@ -520,9 +521,17 @@ a{
     animation: turn-plus 0.2s forwards;
 }
 
-.faq-column{
-    width: 45%;
+@media screen and (min-width: 768px){
+    .faq-column{
+        width: 45%;
+    }
 }
+@media screen and (max-width: 768px){
+    .faq-column{
+        width: 100%;
+    }
+}
+
 
 .faq-container{
     display: flex;
@@ -603,9 +612,10 @@ a{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 30px;
+    
 }
 .team-member{
+    margin-top: 30px;
     width: fit-content;
     display: flex;
     flex-direction: column;
