--- a/style.css
+++ b/style.css
@@ -462,8 +462,7 @@ a{
     
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between;
-    justify-content: flex-start; */
+    justify-content: space-between;
 }
 
 @keyframes turn-x{
