--- a/style.css
+++ b/style.css
@@ -54,11 +54,23 @@ html, body{
     .landing-page{
         background-image: url("assets/background_wide.png");
     }
+    .desktop-bar{
+        display: flex;
+    }
+    .mobile-bar{
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px){
     .landing-page{
         background-image: url("assets/background_mobile.png");
+    }
+    .desktop-bar{
+        display: none;
+    }
+    .mobile-bar{
+        display: flex;
     }
 }
 
@@ -90,12 +102,12 @@ html, body{
 
 .navigation{
     text-align: right;
-    display: flex;
+    /* display: flex; */
     justify-items: flex-end;
     justify-content: flex-end;
     align-items: center;
 }
-.navigation a{
+.navigation a, .navigation p{
     margin-left: 5%;
     margin-right: 5%;
     font-size: 20px;
@@ -105,6 +117,10 @@ html, body{
     text-decoration: none;
     text-shadow: 0 0 10px #90899a, 0 0 20px #90899a;
     position: relative;
+}
+.navigation p{
+    font-family: assistant-extrabold;
+    font-size: 36px;
 }
 .navigation a::after {
     content: '';
@@ -117,12 +133,42 @@ html, body{
     background-color: #d4d2de;
     transform-origin: bottom right;
     transition: transform 0.25s ease-out;
-  }
-  
-  .navigation a:hover::after {
+}
+
+.navigation a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
-  }
+}
+
+.dropdown{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    transition: 0.2s;
+
+    width: 80%;
+    /* background-color: #2a214d; */
+    backdrop-filter: brightness(0.2);
+    -webkit-backdrop-filter: brightness(0.2);
+    top: 10vh;
+    /* padding: 5px; */
+    box-sizing:border-box;
+    border-radius: 8px;
+    
+}
+.dropdown a{
+    font-size: 20px;
+    text-decoration: none;
+    font-family: assistant-bold;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 20px
+}
+
+
+
+
 
 .title-block{
     margin-top: 5vh;
@@ -782,8 +828,9 @@ a{
     object-fit: contain;
     border-radius: 100%;
     border: 4px solid #d4d2de;
-    outline: 4px solid #ebb762;
+    /* outline: 4px solid #ebb762; */
     /* outline-offset: 4px; */
+    box-shadow: 0 0 0 4px #ebb762;
 }
 
 @media screen and (min-width: 768px){
