--- a/style.css
+++ b/style.css
@@ -149,21 +149,35 @@ html, body{
 
     width: 80%;
     /* background-color: #2a214d; */
-    backdrop-filter: brightness(0.2);
-    -webkit-backdrop-filter: brightness(0.2);
+    /* background: rgba(39, 52, 99, 0.2); */
+
+
     top: 10vh;
     /* padding: 5px; */
     box-sizing:border-box;
     border-radius: 8px;
     
 }
+.dropdown::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    pointer-events: none;
+    z-index: 1;
+}
+
 .dropdown a{
     font-size: 20px;
     text-decoration: none;
     font-family: assistant-bold;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 20px
+    margin-left: 20px;
+    z-index: 2;
 }
 
 
