better mobile background

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ html, body{
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
-    background-color: #a14c84;
+    background-color: #35289b;
     width: 100%;
 }
 
